--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Single Pager</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="./css/gallery/logo_001.png" alt="logo" />
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Prices</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Login</a></li>
+          <li><a href="#">Sign Up</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="main-page">
+        <div class="text">
+          <h1>Make your Startup web with our template</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo
+            cupiditate placeat dolores, voluptatum corporis numquam, commodi
+            quis maiores non modi perspiciatis obcaecati odit rem magnam ipsum
+            rerum, autem libero inventore consequatur. Quos inventore quisquam
+            doloribus magni vitae molestias! Earum pariatur hic vel maiores
+            nobis atque.
+          </p>
+          <div class="links">
+            <a href="#">Learn more</a>
+            <a href="#">Get the App</a>
+          </div>
+        </div>
+        <div class="pictures">
+          <div class="photo1">
+            <img src="./css/gallery/phone_001.png" alt="" />
+          </div>
+          <div class="photo2">
+            <img src="./css/gallery/phone_002.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
+</html>
