--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
       <div class="main-page">
         <div class="text">
-          <h1>Make your Startup web with our template</h1>
+          <h1>Make your Startup web with our template,</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo
             cupiditate placeat dolores, voluptatum corporis numquam, commodi
