--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>layou-page</title>
+    <title>layout-page</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -26,7 +26,7 @@
     <main>
       <div class="main-page">
         <div class="text">
-          <h2>Make your Startup web with our template,</h2>
+          <h2>Make your Startup web with our Template,</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo
             cupiditate placeat dolores, voluptatum corporis numquam, commodi
